<resources>
    <string name="app_name">FantasyCensus</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search by name</string>
    <string name="title_activity_citizen_detail">CitizenDetailActivity</string>
    <string name="msg_no_match_any_citizen">\"%1$s\" did not match any citizen.</string>
    <string name="label_hair_color">Hair color</string>
    <string name="label_weight">Weight</string>
    <string name="label_height">Height</string>
    <string name="label_age">Age</string>
    <string name="title_professions">Professions</string>
    <string name="title_bio">Bio</string>
    <string name="title_friends">Friends</string>
    <string name="msg_generic_error">Ops! Something wrong happens. Check your network.</string>
</resources>
